--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_screenutil: ^1.1.0
   dio: ^3.0.9
+  flutter_swiper : ^1.1.4  #轮播图
+  fluttertoast: ^4.0.1
 
 dev_dependencies:
   flutter_test:
