引入url_laurnch第三方库可以在默认浏览器中打开网址,发送邮件,拨打电话,发送信息

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   dio: ^3.0.9
   flutter_swiper : ^1.1.4  #轮播图
   fluttertoast: ^4.0.1
+  url_launcher: ^5.4.2
 
 dev_dependencies:
   flutter_test:
