--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,9 @@ android {
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters 'armeabi-v7a','x86'
+        }
     }
 
     buildTypes {
@@ -53,6 +56,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
 }
 
 flutter {
