--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_screenutil: ^1.1.0
+  flutter_staggered_grid_view: ^0.3.0
   dio: ^3.0.9
   flutter_swiper : ^1.1.4  #轮播图
   fluttertoast: ^4.0.1
