--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   package_info: any
   open_file: any
   path_provider: any
+  flutter_plugin_record: ^0.0.9
+
 
 dev_dependencies:
   flutter_test:
