--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -39,23 +39,50 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.wdxflutter.flutter_hexun"
-        minSdkVersion 16
-        targetSdkVersion 28
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         ndk {
-            abiFilters 'armeabi-v7a','x86'
+            abiFilters "armeabi", "armeabi-v7a","arm64-v8a", "x86"
+        }
+        splits {
+            abi {
+                enable true
+                reset()
+                include "armeabi", "armeabi-v7a","arm64-v8a", "x86"
+                universalApk true
+            }
+        }
+    }
+    signingConfigs {
+        v2 {
+            storeFile file("fsyuncai.jks")
+            storePassword "123456"
+            keyAlias "fsyuncai"
+            keyPassword "123456"
+            v2SigningEnabled true
+        }
+
+        v1 {
+            storeFile file("fsyuncai.jks")
+            storePassword "123456"
+            keyAlias "fsyuncai"
+            keyPassword "123456"
+            v1SigningEnabled true
+        }
+
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.v2
+        }
+
+        debug {
+            signingConfig signingConfigs.v1
         }
     }
 
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
-        }
-    }
 
 }
 
@@ -66,6 +93,4 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
