解决真机运行问题  Unsuported Android Plugin version: 3.5.3  gradle 从3.5.3降到3.5.0

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,14 +46,14 @@ android {
         ndk {
             abiFilters "armeabi", "armeabi-v7a","arm64-v8a", "x86"
         }
-        splits {
-            abi {
-                enable true
-                reset()
-                include "armeabi", "armeabi-v7a","arm64-v8a", "x86"
-                universalApk true
-            }
-        }
+//        splits {
+//            abi {
+//                enable true
+//                reset()
+//                include "armeabi", "armeabi-v7a","arm64-v8a", "x86"
+//                universalApk true
+//            }
+//        }
     }
     signingConfigs {
         v2 {
