--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,17 @@ dependencies:
   open_file: any
   path_provider: any
   flutter_plugin_record: ^0.1.3
-
+  sqflite: ^1.3.0
+  lpinyin: ^1.0.7
+  intl: ^0.16.1
+  flutter_app_upgrade: ^1.0.2
+  webview_flutter: ^0.3.20+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  json_serializable: ^3.0.0
+  build_runner: ^1.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,7 +62,12 @@ flutter:
     - assets/subtitle.txt
     - assets/images/
   #  - images/a_dot_ham.jpeg
+    - assets/json/
 
+  fonts:
+    - family: appIconFonts
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
