--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,30 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>方盛云采需要您的同意,以便访问媒体资料库</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>方盛云采需要您的同意,以便访问日历</string>
+	<key>NSCameraUsageDescription</key>
+	<string>方盛云采需要访问您的相机，以便您正常使用扫码、拍摄等服务</string>
+	<key>NSContactsUsageDescription</key>
+	<string>方盛云采需要您的同意,以便访问通讯录</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>方盛云采需要获取您的位置信息，以确定送货信息</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>方盛云采需要获取您的位置信息，以确定送货信息</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>方盛云采需要获取您的位置信息，以确定送货信息</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>方盛云采需要您的同意,以便访问麦克风</string>
+	<key>NSMotionUsageDescription</key>
+	<string>方盛云采需要您的同意,以便访问运动与健身</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>方盛云采需要访问您的相册，以便正常使用图片上传、图片保存等服务</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>方盛云采需要访问您的相册，以便正常使用图片上传、图片保存等服务</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>方盛云采需要您的同意,以便使用语音识别</string>
 </dict>
+	
 </plist>
