--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   intl: ^0.16.1
   flutter_app_upgrade: ^1.0.2
   webview_flutter: ^0.3.20+2
+  image_picker: ^0.6.6+4
+  video_player:	^0.10.3
 
 dev_dependencies:
   flutter_test:
