--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -27,7 +27,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
     compileSdkVersion 29
-
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
