--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   webview_flutter: ^0.3.20+2
   image_picker: ^0.6.6+4
   video_player:	^0.10.3
+  # only android
+  geolocator: ^5.3.1    
 
 dev_dependencies:
   flutter_test:
