--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,15 @@ dependencies:
   open_file: any
   path_provider: any
   flutter_plugin_record: ^0.1.3
-  sqflite: ^1.3.0
+  sqflite: ^1.3.0    # 数据库
   lpinyin: ^1.0.7
   intl: ^0.16.1
   flutter_app_upgrade: ^1.0.2
   webview_flutter: ^0.3.20+2
   image_picker: ^0.6.6+4
   video_player:	^0.10.3
-  # only android
-  geolocator: ^5.3.1    
+  # 地理定位器 
+  geolocator: ^5.3.1
 
 dev_dependencies:
   flutter_test:
