添加省市区三级联动弹框选择器加入

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   assets:
     - assets/subtitle.txt
     - assets/images/
+    - data/province.json
   #  - images/a_dot_ham.jpeg
     - assets/json/
 
