--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,31 +23,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  flutter_screenutil: ^1.1.0
+  flutter_screenutil: ^2.2.0
   flutter_staggered_grid_view: ^0.3.0
   dio: ^3.0.9
   flutter_swiper : ^1.1.4  #轮播图
   fluttertoast: ^4.0.1
-  url_launcher: ^5.4.5
+  url_launcher: ^5.5.0
   package_info: any
   open_file: any
   path_provider: any
-  flutter_plugin_record: ^0.1.3
+  flutter_plugin_record: ^0.1.7
   sqflite: ^1.3.0    # 数据库
-  lpinyin: ^1.0.7
+  lpinyin: ^1.0.9
   intl: ^0.16.1
-  flutter_app_upgrade: ^1.0.2
-  webview_flutter: ^0.3.20+2
-  image_picker: ^0.6.6+4
-  video_player:	^0.10.3
+  flutter_app_upgrade: ^1.1.0
+  webview_flutter: ^0.3.22+1
+  image_picker: ^0.6.7+4
+  video_player:    ^0.10.11+2
   # 地理定位器 
-  geolocator: ^5.3.1
+  geolocator: ^5.3.2+2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  json_serializable: ^3.0.0
-  build_runner: ^1.6.1
+  json_serializable: ^3.3.0
+  build_runner: ^1.10.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
