--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   video_player:    ^0.10.11+2
   # 地理定位器 
   geolocator: ^5.3.2+2
+  # leancloud  数据存储
+  leancloud_storage: ^0.2.9
 
 dev_dependencies:
   flutter_test:
